# neptun.data.generators

./: .env.example  .gitignore  README.md  dockercompose.generator.py  dockerfile.generator.py  dockerimage.info.generator.py  pyproject.toml  requirements.txt
data/: scraped-images.txt
