[tool.poetry]
name = "neptun-data-generators"
version = "0.1.0"
description = ""
authors = ["stevan06v <stevanvlajic5@gmail.com>"]
readme = "README.md"
packages = [{include = "neptun"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
dockerfile = "^3.4.0"
huggingface-hub = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
